--- a/theme/boost/templates/navbar-secure.mustache
+++ b/theme/boost/templates/navbar-secure.mustache
@@ -15,7 +15,18 @@
     along with Moodle.  If not, see <http://www.gnu.org/licenses/>.
 }}
 {{!
-    secure navbar.
+    @template theme_boost/navbar-secure
+
+    This template renders the top navbar.
+
+    Example context (json):
+    {
+        "output": {
+            "should_display_navbar_logo": "true",
+            "get_compact_logo_url": "http://example.com/image.png"
+        },
+        "sitename": "Moodle Site"
+    }
 }}
 <nav class="fixed-top navbar navbar-light bg-white navbar-expand moodle-has-zindex" aria-label="{{#str}}navigation{{/str}}">
 
@@ -26,6 +37,10 @@
         {{/ output.should_display_navbar_logo }}
         <span class="site-name d-none d-md-inline">{{{ sitename }}}</span>
 
+        <ul class="navbar-nav d-none d-md-flex">
+            <!-- custom_menu -->
+            {{{ output.custom_menu }}}
+        </ul>
         <ul class="nav navbar-nav ml-auto">
             <li class="nav-item">
                 {{{ output.secure_login_info }}}
