--- a/theme/classic/templates/navbar-secure.mustache
+++ b/theme/classic/templates/navbar-secure.mustache
@@ -25,8 +25,7 @@
             "should_display_navbar_logo": "true",
             "get_compact_logo_url": "http://example.com/image.png"
         },
-        "sitename": "Moodle Site",
-        "secure_login_info": "Logged in as test user"
+        "sitename": "Moodle Site"
     }
 }}
 <nav class="fixed-top navbar navbar-bootswatch navbar-expand moodle-has-zindex">
@@ -37,6 +36,10 @@
     {{/ output.should_display_navbar_logo }}
     <span class="site-name d-none d-md-inline">{{{ sitename }}}</span>
 
+    <ul class="navbar-nav d-none d-md-flex">
+        <!-- custom_menu -->
+        {{{ output.custom_menu }}}
+    </ul>
     <ul class="nav navbar-nav ml-auto">
         <li class="nav-item">
             {{{ output.secure_login_info }}}
